[14] - Estilizando header/Corrigindo seletor[3]

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
+        <li><a href="#home">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -32,21 +33,15 @@
     <li>Slack</li>
     <li>Empatia</li>
   </ol>
-  <article>
+  <article class="lado-esquerdo">
     <header>
       <h2>Minha evolução</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum itaque sed quis, consectetur dolorum, nostrum officia quo minus, tempora id deleniti. Labore voluptate repellat deleniti voluptas quia. Quibusdam, dolor blanditiis!
       Aut quibusdam libero asperiores assumenda tenetur blanditiis odit earum harum, aliquid qui corporis nesciunt impedit consequuntur voluptates, reiciendis error vitae dolores! Nobis recusandae delectus debitis?</p>
     </header>
-  </article>
-  <section>
-    <aside>
-      <h2>Meu aprendizado</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
-    </p>
-    </aside>
-  </section>
+  </article>  
   <ul id="licoes_a_aprender">
+    <h2>Ainda falta</h2>
     <li>Lógica de Programação</li>
     <li>Javascript</li>
     <li>DOM</li>
@@ -59,6 +54,13 @@
     <li>Metodolodias Ágeis</li>
   </ul>
   </main>
+  <section class="lado-direito">
+    <aside>
+      <h2>Meu aprendizado</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
+    </p>
+    </aside>
+  </section>
   <footer id="rodape">
     <a href="https://github.com/negres" target="_blank">Natália Negreiros</a>
   </footer>
