Adicionar style na navegacao

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <h1 id="titulo">LESSONS LEARNED</h1>
         <nav id="navegacao">
             <ul class="listas">
-                <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
+                <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
                             src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
                 </li>
                 <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com"
-                        target="_Blank"><img
+                        target="_Blank"><img class="links_logos"
                             src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
                 </li>
             </ul>
