[Task 12] Created table with simple info

--- a/index.html
+++ b/index.html
@@ -8,17 +8,32 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Lessons Learned</h1>
+            <nav id="nav-link">
+                <p>
+                    <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
+                </p>
+            </nav>
         </header>
-        <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
-        <nav>
-            <h2>Me segue nas redes sociais!</h2>
-            <p>
-                <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
-            </p>
-        </nav>
         <section>
-            <h3>Lições Aprendidas:</h3>
+            <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
+            <table id="table">
+                <tr>
+                    <th>Nome</th>
+                    <td>Gabriel <span>Gal</span>dino</td>
+                </tr>
+                <tr>
+                    <th>Idade</th>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <th>Turma</th>
+                    <td>09</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <h2>Lições Aprendidas:</h2>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
                 <li>Introdução - Unix & Shell</li>
@@ -33,7 +48,7 @@
             </ol>
         </section>
         <section>
-            <h3>Lições que desejo aprender ainda:</h3>
+            <h2>Lições que desejo aprender ainda:</h2>
             <ul id="licoes_a_aprender">
                 <li>Javascript</li>
                 <li>React</li>
