--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     </header>
     <main id="pagina-principal">
         <img id="minha_foto" src="foto.jpg" alt="Foto Felipe Rocha">
+        <h2 class="titulo">Felipe Rocha</h2>
+        <div id="github-icone">
+            <a href="https://github.com/feliperocha-dev" target="_blank"><img class="icone" src="github.png" alt="Logo Github"><h3>GITHUB</h3></a>
+        </div>
+        <div id="linkedin-icone">
+            <a  href="https://www.linkedin.com/in/felipe-silva-rocha/" target="_blank"><img class="icone" src="linkedin.png" alt="Logo Linkedin"><h3>LINKEDIN</h3></a>                
+        </div>
         <section id="listas">
             <h2>Lições</h2>
             <ol id="licoes_aprendidas">
@@ -49,8 +56,7 @@
         <article id="lado-esquerdo">
             <section>
                 <h2>Meu Aprendizado</h2>
-                <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado.</p>
-                <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>               
+                <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. <br>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>               
             </section>
         </article>
         <aside id="lado-direito">
