--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <title>Teste</title>
     </head>
     <body>
-
+        <header id "cabecalho">
+            <h1 id "titulo">Lições aprendidas - Trybe</h1>
+        </header>
     </body>
 </html>
