--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         <li>Inspect</li>
         <li>Semantic HTML</li>
     </ul>
+    <footer id="rodape">
+        Project Lessons Learned - SD09
+    </footer>
 </body>
 </html>
