--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lições aprendidas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <a href="https://www.w3schools.com/html/html_css.asp" target="_blank">Mais sobre HTML e CSS</a>
     </header>
 </body>
 </html>
