--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="style.css">
+    <title>Lições Aprendidas - Renato Feitosa</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas - Renato Feitosa</h1>
     </header>
     <main>
+      <img id="minha_foto" src="profile-img.jpg" alt="Foto de Renato Feitosa">
     </main>
   </body>
 </html>
