arrumando css por causa do codeclimate

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     Sobre o meu aprendizado
                 </h2>
                 <p>
-                    bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto 
+                    bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto
                 </p>
                 <aside>
                     <h2 id="breve">um pedaço de texto que não precisa ser realmente muito grande nem nada</h2>
@@ -132,7 +132,7 @@
                 <p>enchedor de linguiça</p>
                 <p>enchedor de linguiça</p>
             </div>
-            <div style="clear:both;"></div>
+            <div style="clear: both;"></div>
                 <div>
                     <h2 id="referencias">References</h2>
                     <a target ="_blank" href="https://css-tricks.com/hash-tag-links-padding/">[1] Como fazer o link interno não se esconder atras do header quando ele é fixo.</a>
@@ -143,6 +143,6 @@
                     <p><a id="contact" target="_blank" href="https://github.com/tiago-yoneda">Meu perfil Github</a></p>
                     <p></p>
                 </footer>
-                <p style="text-align:center"><a href="#TOP">TOP</a></p>
+                <p style="text-align: center;"><a href="#TOP">TOP</a></p>
     </body>
 </html>
