finalizando com o aside

--- a/index.html
+++ b/index.html
@@ -12,43 +12,56 @@
         <h1 id="titulo">Lessons Learned</h1>
     </header>
     <main>
-        <img src="assets/rsz_1design_sem_nome.png" alt="foto de michael" id="minha_foto">
-        <div id="container-lista-licoes_aprendidas">
-            <h2>Lições aprendidas até agora:</h2>
-            <ol id="licoes_aprendidas">
-                <li>Como usar o terminal</li>
-                <li>Como a internet funciona</li>
-                <li>Conhecendo o github</li>
-                <li>Como add um arquivo no stage</li>
-                <li>Como fazer um commit</li>
-                <li>Fazendo um git push</li>
-                <li>Criando um pull request e finando o merge</li>
-                <li>Introdução ao HTML5</li>
-                <li>CSS</li>
-                <li>HTML semântico e sua importância</li>
-            </ol>
+        <div id="foto">
+            <img src="assets/rsz_1design_sem_nome.png" alt="foto de michael" id="minha_foto">
         </div>
-        <div id="container-lista-licoes_a_aprender">
-            <h2>Lições a aprender daqui para frente:</h2>
-            <ul id="licoes_a_aprender">
-                <li>Aprendizado continuo de soft skills</li>
-                <li>JavaScript introdução</li>
-                <li>JavaScript array e loop for</li>
-                <li>Lógica de programação</li>
-                <li>JavaScript direcionado a objetos</li>
-                <li>Objetos e funções</li>
-                <li>Quem é esse cara chamado DOM</li>
-                <li>Desenvolvimento responsivo</li>
-                <li>Bibliotecas JS</li>
-                <li>Metodologias ágeis</li>
-            </ul>
+        <div container-container>
+            <div id="container-lista-licoes_aprendidas">
+                <h2>Lições aprendidas até agora:</h2>
+                <ol id="licoes_aprendidas">
+                    <li>Como usar o terminal</li>
+                    <li>Como a internet funciona</li>
+                    <li>Conhecendo o github</li>
+                    <li>Como add um arquivo no stage</li>
+                    <li>Como fazer um commit</li>
+                    <li>Fazendo um git push</li>
+                    <li>Criando um pull request e finando o merge</li>
+                    <li>Introdução ao HTML5</li>
+                    <li>CSS</li>
+                    <li>HTML semântico e sua importância</li>
+                </ol>
+            </div>
+            <div id="container-lista-licoes_a_aprender">
+                <h2>Lições a aprender daqui para frente:</h2>
+                <ul id="licoes_a_aprender">
+                    <li>Aprendizado continuo de soft skills</li>
+                    <li>JavaScript introdução</li>
+                    <li>JavaScript array e loop for</li>
+                    <li>Lógica de programação</li>
+                    <li>JavaScript direcionado a objetos</li>
+                    <li>Objetos e funções</li>
+                    <li>Quem é esse cara chamado DOM</li>
+                    <li>Desenvolvimento responsivo</li>
+                    <li>Bibliotecas JS</li>
+                    <li>Metodologias ágeis</li>
+                </ul>
+            </div>
         </div>
-        <section id="sobre-aprender">
-            <article>
+        <div class="container-text">
+            <section id="sobre-aprender">
+                <h3>Nossa rotina:</h3>
                 <p>Aqui na TRYBE, o foco é cada vez aprender mais, sendo assim todos os dias temos assuntos diferenciados no esquenta.</p>
                 <p> todo o conteúdo no trybe/course, e depois ainda vamos para uma aula ao vivo sem igual com o especialista Gabriel Oliva. A aula do Oliva é simplesmente sem igual, uma aula descontraída dinâmica e cheia de interação com os alunos.</p> 
-            </article>
         </section>
+        </div>
+        <div id="aside">
+            <aside class="aside-lateral">
+                <h3>Sobre o que  aprendemos: </h3>
+                <article>
+                    <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
+                </article>
+            </aside>
+        </div>
     </main>
     <footer id="rodape">
         <h3 class="title-footer">Para conhecer mais:</h3>
