--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <div>
-                <h2>lições aprendidas</h2>
+                <h2>Lições aprendidas</h2>
                 <ol id="licoes_aprendidas">
                     <li>Linux</li>
                     <li>Html</li>
