--- a/index.html
+++ b/index.html
@@ -10,31 +10,38 @@
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned</h1>
   </header>
-  <img src="assets/daniel.jpg" alt="Foto de Daniel" id="minha_foto">
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Git</li>
-    <li>GitHub</li>
-    <li>Estruturas de página HTML</li>
-    <li>Primeiros passos em CSS</li>
-    <li>CSS Seletores e posicionamento</li>
-    <li>HTML Semântico</li>
-    <li>Como a internet funciona</li>
-    <li>Inteligência Emocional</li>
-  </ol>
-  <ul>
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Git</li>
-    <li>GitHub</li>
-    <li>Estruturas de página HTML</li>
-    <li>Primeiros passos em CSS</li>
-    <li>CSS Seletores e posicionamento</li>
-    <li>HTML Semântico</li>
-    <li>Como a internet funciona</li>
-    <li>Inteligência Emocional</li>
-  </ul>
+  <main>
+    <img src="assets/daniel.jpg" alt="Foto de Daniel" id="minha_foto">
+    <section id="lists">
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Estruturas de página HTML</li>
+        <li>Primeiros passos em CSS</li>
+        <li>CSS Seletores e posicionamento</li>
+        <li>HTML Semântico</li>
+        <li>Como a internet funciona</li>
+        <li>Inteligência Emocional</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Estruturas de página HTML</li>
+        <li>Primeiros passos em CSS</li>
+        <li>CSS Seletores e posicionamento</li>
+        <li>HTML Semântico</li>
+        <li>Como a internet funciona</li>
+        <li>Inteligência Emocional</li>
+      </ul>
+    </section>
+    <article>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis. Quis lectus nulla at volutpat diam ut. Tristique et egestas quis ipsum. Ac feugiat sed lectus vestibulum mattis ullamcorper. Tincidunt vitae semper quis lectus nulla. Nec ultrices dui sapien eget mi proin sed libero. Tellus id interdum velit laoreet id donec. Fermentum dui faucibus in ornare quam viverra orci. Id consectetur purus ut faucibus. Ac ut consequat semper viverra nam libero justo. 
+    </article>
+  </main>
   <footer id="rodape"><a href="https://www.linkedin.com/in/daniel-fasanaro-9b0ba01bb/" target="_blank">linkedin</a></footer>
 </body>
 </html>
