--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<article>
+<article id="artigo">
     <h2> Sobre o meu aprendizado na Trybe</h2>
     <p> Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o,
     sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício.
