Adicionar alt nas imagens

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <nav id="navegacao">
             <ul class="listas">
                 <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
+                            alt="logo do linkedin"
                             src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
                 </li>
                 <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com"
-                        target="_Blank"><img class="links_logos"
+                        target="_Blank"><img class="links_logos" alt="logo do gmail"
                             src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
                 </li>
             </ul>
@@ -91,13 +92,17 @@
                     menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
             </aside>
         </section>
-        <footer id="rodape">
-            <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
-            <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
-                    src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
-            <a href="https://github.com/gabrielgarciamendonca" target="_Blank"><img class="links_logos"
-                    src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" /></a>
-        </footer>
+        <section>
+            <footer id="rodape">
+                <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
+                <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
+                        alt="logo do linkedin"
+                        src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
+                <a href="https://github.com/gabrielgarciamendonca" target="_Blank"><img class="links_logos"
+                        alt="logo do github"
+                        src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" /></a>
+            </footer>
+        </section>
     </main>
 
 </body>
