adiciona fonte e cores

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
@@ -12,7 +14,7 @@
         <nav>
             <ul>
                 <li>Home</li>
-                <li>Login</li>
+                <li>Contato</li>
             </ul>
         </nav>
     </header>
@@ -32,6 +34,7 @@
             <section>
                 <h3>Lições</h3><br>
                 <ol id="licoes_aprendidas">
+                    <h4>Lições aprendidas</h4>
                     <li>Unix</li>
                     <li>Git</li>
                     <li>GitHub</li>
@@ -46,6 +49,7 @@
             </section>
             <section>
                 <ul id="licoes_a_aprender">
+                    <h4>Proximos aprendizados</h4>
                     <li>JavaScript</li>
                     <li>DOM</li>
                     <li>Forms</li>
