--- a/index.html
+++ b/index.html
@@ -13,36 +13,52 @@
     <figure class="fotos">
         <img src="../images/me.jpg" alt="Minha Foto" id="minha_foto">
     </figure>
-    <section id="listas">
-        <h2>Licoes</h2>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>SoftSkills</li>
-            <li>Zoom</li>
-            <li>Slack</li>
-            <li>Semantic HTML</li>
-            <li>Terminal</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-            <li>HashSet</li>
-        </ul>
+    <section id="section_list">
+        <div id="listas">
+            <h2>Licoes</h2>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>SoftSkills</li>
+                <li>Zoom</li>
+                <li>Slack</li>
+                <li>Semantic HTML</li>
+                <li>Terminal</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+                <li>HashSet</li>
+            </ul>
+        </div> 
     </section>
+    <section id="section_article">
+        <h2>Artigos</h2>
+        <article id="artigo">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum erat a lectus lobortis scelerisque. Donec rutrum urna volutpat, dignissim nisl eu, fringilla mauris. Vestibulum libero tellus, lacinia eu nisl vel, eleifend ornare nulla. Aenean sed lacus ac lectus pulvinar interdum. Praesent id metus commodo, suscipit mauris ut, placerat ipsum. Aliquam erat volutpat. Sed a elit tempor, sollicitudin lacus eu, venenatis libero. In laoreet nisl id orci interdum, et pretium est scelerisque. Etiam fringilla luctus sem. Quisque vel commodo odio.
+            </p>
+        </article>
+        <aside id="barra_lateral">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent semper, tellus quis accumsan pulvinar, mi odio commodo libero, non consequat risus purus quis augue. Vestibulum vel blandit nulla. Donec fringilla nibh mauris, quis pharetra elit luctus gravida. Vestibulum viverra.</p>
+        </aside>
+    </section>   
     <footer id="rodape">
-        <a href="https://github.com/osvaldoBorgesCNeto" target="_blank">Meu GitHub</a>
-        <h5>Todos os direitos reservados, Osvaldo Borges.</h5>
+        <div>
+            <a href="https://github.com/osvaldoBorgesCNeto" target="_blank">GitHub</a>
+        </div>
+        <div><h5>Todos os direitos reservados, Osvaldo Borges.</h5>
+        </div>  
     </footer>
 </body>
 </html>
