5- Adiciona uma lista nao numerada com dez liçoes a aprender, com id-licoes_a_aprender. ✅

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <h1 id="titulo">Primeiro Projeto | HTML & CSS - Trybe! 🚀</h1>
     </header>
 
     <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/72811671?s=460&u=34008ff57b6cc2524ae87a154c1fe70ef90abe5c&v=4" alt="Cleber Teixeira - Turma 09">
 
-    <h2>Lições</h2>
+    <h2>Lições aprendidas:</h2>
 
     <ol id="licoes_aprendidas">
         <li>Zoom</li>
@@ -28,5 +28,20 @@
         <li>Inteligência Emocional</li>
         <li>Empatia</li>
     </ol>
+
+    <h2>Lições a aprender:</h2>
+
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Lógica de Programação</li>
+        <li>Algoritmos</li>
+        <li>DOM</li>
+        <li>JavaScript ES6</li>
+        <li>Testes automatizados com Jest</li>
+        <li>React</li>
+        <li>Formulários com React</li>
+        <li>Metodologias Ágeis</li>
+        <li>+ Soft Skills</li>
+    </ul>
 </body>
 </html>
