--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
         <li>NoSQL</li>
         <li>React</li>
     </ul>
-
     </main>
+
+    <article>
+    <h2>Meus Aprendizados</h2>
+    <p> Extasiado por tecnologia e o poder que ela tem de transformar a vida das pessoas, estou passando por uma transição de carreira interessantíssima acompanhado pela empresa TRYBE.<br> Começando literalmente do zero, estou passando por grandes  desafios, e em menos de um mês de curso já aprendi muita coisa!<br> É necessário bastante dedicação e estudo, os finais de semana se tornaram na frente do computador, porém a metodologia ativa faz com que seja divertido e estimulante estudar. Isso facilita muito as coisas!</p>
+</article>
+
+<aside>
+    <p> Extasiado por tecnologia e o poder que ela tem de transformar a vida das pessoas, estou passando por uma transição de carreira interessantíssima acompanhado pela empresa TRYBE.<br> Começando literalmente do zero, estou passando por grandes  desafios, e em menos de um mês de curso já aprendi muita coisa!<br> É necessário bastante dedicação e estudo, os finais de semana se tornaram na frente do computador, porém a metodologia ativa faz com que seja divertido e estimulante estudar. Isso facilita muito as coisas!</p>
+</aside>section>
+
+
+
+</section>
+
+    <footer id="rodape">
+    <a href="https://www.betrybe.com/" target="_blanck"> Conheça a Trybe!</a>     
+    </footer>
 </body>
