Adjusting article and aside

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <li>Soft Skills</li>
             </ul>
         </section>
+        <h2>Trajetória - A New Hope</h2>
         <article>
-            <h2>Trajetória - A New Hope</h2>
             <p>
                 Numa galáxia não muito distante... <br>
                 Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
@@ -77,12 +77,12 @@
         </article>
         <aside>
             <p>
-                <em><strong id="fun-fact">FUN FACT:</strong><br>
+                <span class="highlight-word">FUN FACT:</span><br>
                 Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
                 Lubuntu decidiu simplesmente não funcionar por alguma razão, e tive
                 que às pressas fazer outro pendrive com Ubuntu e formatar
                 o notebook nesse meio tempo. Pensa na adrenalina...
-                </em>
+                
             </p>
         </aside>
         <footer id="rodape">
