--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>project-lessons-learned</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Aprendizados em 2 semanas de Trybe</h1>
+    </header>
     
 </body>
 </html>
