--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <article>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis. Quis lectus nulla at volutpat diam ut. Tristique et egestas quis ipsum. Ac feugiat sed lectus vestibulum mattis ullamcorper. Tincidunt vitae semper quis lectus nulla. Nec ultrices dui sapien eget mi proin sed libero. Tellus id interdum velit laoreet id donec. Fermentum dui faucibus in ornare quam viverra orci. Id consectetur purus ut faucibus. Ac ut consequat semper viverra nam libero justo. 
     </article>
+    <aside>
+      Convallis tellus id interdum velit laoreet id donec. Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Aliquam faucibus purus in massa tempor nec feugiat nisl. Faucibus a pellentesque sit amet porttitor eget dolor morbi. 
+    </aside>
   </main>
   <footer id="rodape"><a href="https://www.linkedin.com/in/daniel-fasanaro-9b0ba01bb/" target="_blank">linkedin</a></footer>
 </body>
