--- a/index.html
+++ b/index.html
@@ -6,45 +6,54 @@
     <title>Lessons Learned Trybe :rocket:</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header id="cabecalho"><h1 id="titulo">LUCIANO LODI</h1>
-  <img id="minha_foto" src="Luciano Lodi.jpg" alt="Foto de Luciano Lodi">
+
+<header id="cabecalho">
+  <h1 id="titulo">Lessons Learned</h1>
+  <h2 id="titulo">LUCIANO LODI</h2>
 </header>
+
 <body>
-    
-  <article class="lado-esq"><h2>QUE BOM ESTAR AQUI</h2>
-    <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
+  <section><img id="minha_foto" src="Luciano Lodi.jpg" alt="foto de Luciano">
 
-    <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! #VamoQueVamo!</p> 
-  </article>
-  <section class="lado-dir">
-    <ol id="licoes_aprendidas"> <h2>O QUE APRENDI:</h2>
-      <li>Unix</li>
-      <li>Bash</li>
-      <li>Versionamento com Git e Github</li>
-      <li>Criar páginas com HTML</li>
-      <li>Estilizar páginas com CSS</li>
-      <li>Box Model</li>
-      <li>Acessibilidade com HTML Semântico</li>
-      <li>O Stomatopoda é um bicho muito doido!</li>
-      <li>A Trybe é demais!</li>
-      <li>A Turma 09 é sensacional! (Oliva que disse)</li>
-    </ol>
+    <article class="lado-esq"><h2>QUE BOM ESTAR AQUI</h2>
+      <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
 
-    <ul id="licoes_a_aprender"><h2>O QUE AINDA QUERO (E VOU) APRENDER:</h2>
-      <li>Agilidade para codar</li>
-      <li>Codar de forma amigável e legível</li>
-      <li>Ferramentas de SEO</li>
-      <li>Python</li>
-      <li>JavaScript</li>
-      <li>Soft Skills para o trabalho e para a vida</li>
-      <li>Bases de Dados</li>
-      <li>React</li>
-      <li>Metodologias ágeis</li>
-      <li>Sotaque mineiro</li>
-    </ul>
-  </section>    
+      <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! #VamoQueVamo!</p> 
+    </article>
 
-  <aside>
+    <section class="lado-dir">
+
+      <ol id="licoes_aprendidas"> <h2>O QUE APRENDI:</h2>
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Versionamento com Git e Github</li>
+        <li>Criar páginas com HTML</li>
+        <li>Estilizar páginas com CSS</li>
+        <li>Box Model</li>
+        <li>Acessibilidade com HTML Semântico</li>
+        <li>O Stomatopoda é um bicho muito doido!</li>
+        <li>A Trybe é demais!</li>
+        <li>A Turma 09 é sensacional! (Oliva que disse)</li>
+      </ol>
+
+      <ul id="licoes_a_aprender"><h2>O QUE AINDA QUERO (E VOU) APRENDER:</h2>
+        <li>Agilidade para codar</li>
+        <li>Codar de forma amigável e legível</li>
+        <li>Ferramentas de SEO</li>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>Soft Skills para o trabalho e para a vida</li>
+        <li>Bases de Dados</li>
+        <li>React</li>
+        <li>Metodologias ágeis</li>
+        <li>Sotaque mineiro</li>
+      </ul>
+
+    </section>
+
+  </section>
+
+  <aside id="aside">
     <h3>O QUE HÁ ALÉM DO CONHECIMENTO TÉCNICO</h3>
     <p>
       As imprescindíveis <span id="soft-skills">soft skills</span> também têm seu papel fundamental na formação dos Trybers, e tesouros como inteligência emocional, empatia e trabalho em equipe são levados a sério aqui.
