Reduz numero de caracteres de article

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <section id="section">
         <article id="article">
           <h2>Meu Aprendizado</h2>
-          <p>Estou muito feliz até agora com o aprendizado junto com a família Trybe.</p>
-          <p>Aprendemos os camandos básicos do terminal linux e também sobre git e github e como fazer repositórios, clonar, commitar e hospedar páginas no GitPages.</p>
+          <p>Estou muito feliz com o aprendizado junto com a família Trybe.</p>
+          <p>Aprendemos os camandos básicos do linux e sobre git e github e como fazer repositórios, clonar, commitar e hospedar páginas no GitPages.</p>
           <p>Começamos os estudos de HTML e CSS, e HTML semântico, que realmente é uma coisa muito importante e interessante, além de ajudar em muito a organizar as idéias.</p>
-          <p>Tivemos também nessa semana algumas informações importantes sobre como será nosso auto-conhecimento, os 1:1 irão ajudar a alinharmos as idéias.</p>
+          <p>Tivemos nessa semana informações importantes sobre como será nosso auto-conhecimento, os 1:1 irão ajudar a alinharmos as idéias.</p>
         </article>
         <section id="learned_lessons">
           <h3>Lições aprendidas</h3>
