--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <img src="rsz_brunaferreira.jpg" id="minha_foto" alt="Minha Foto">
 <article>
-    <p>Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria...
-       Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás. Estou muito animada com o que tem pela frente! 
+    <p>Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria... Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás. Estou muito animada com o que tem pela frente! 
     </p>
 </article>
 <aside>
