--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         </section>
     </div>
     <footer id="rodape">
-        <p>Todos os direitos reservados, Bruno</p>
+        <table>
+            <th>Todos os direitos reservados, Bruno</th>
+        </table>
     </footer>
 
 </body>
