Task 14 and fix issues

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <section>
                 <div id="gradient-border">
                     <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
-                    <ol id="licoes_aprendidas">
                 </div>
+                    <ol id="licoes_aprendidas">
                     <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
                     <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
                     <li><code>Ctrl-c ctrl-v?</code> dê um <code>cp</code> que o dedo agradece!</li>
@@ -44,17 +44,17 @@
                     <li>Android</li>
                     <li>Conversar com o CEO da Google em um elevador dentro de 30 segundos</li>
                     <li>Estruturar bem o layout com CSS na disciplina finger's economy</li>
-                    <li>Don't Give Up... Just... Do it!</li>
+                    <li>Don't Give Up... Just... <span>Do it!</span></li>
                     <li>Aprender a aprender</li>
                 </ul>
             </section>
             <section>
                 <article>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore excepturi, rerum autem temporibus labore obcaecati iste, similique maiores accusamus, corrupti dolore aut eos quod eius officia tenetur! A, placeat?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
                     <aside>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
                     </aside>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
                 </article>
             </section>
             <section>
