6- Adiciona um rodape a pagina. ✅

--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
         <li>Metodologias Ágeis</li>
         <li>+ Soft Skills</li>
     </ul>
+
+    <footer id="rodape">Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09 ✌️🚀</footer>
 </body>
 </html>
