--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div> 
                 <h3>Lições a aprender</h3>
-                <li id="licoes_a_aprender">
+                <ul id="licoes_a_aprender">
                     <li>NodeJS</li>
                     <li>JavaScript</li>
                     <li>API</li>
@@ -41,7 +41,7 @@
                     <li>Empatia</li>
                     <li>MongoDB</li>
                     <li>Coperação</li>
-                </li>
+                </ul>
             </div>
         </section>
         <article>
